--- a/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.html
+++ b/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.html
@@ -45,18 +45,19 @@
         <!--Button-->
         <div class="col-md-6 btn_search">
             <button class="btn btn-lg btn-block btn_submit">{{'btn.report' | translate }}</button>
-            <button class="btn btn-lg btn-block btn_submit">Export</button>
+            <button class="btn btn-lg btn-block btn_submit" (click)="export()">Export</button>
         </div>
     </div>
 
     <!--Nút tick bao gồm tổ chức-->
     <div class="row" style="padding-top: 10px;">
         <div class="col-md-6">
-            <input type="radio">&nbsp;
-            <span>{{'include.org1' | translate}}</span>
+                <input (change)="changeCheckBox($event)" [checked]="fetchChildData"  type="checkbox" class="custom-control-input" id="customCheck3">
+                <label class="custom-control-label" for="customCheck3">
+                    {{'include.org1' | translate}}
+                </label>
         </div>
     </div>
-
 
 
     <!--Bảng dữ liệu-->
