--- a/src/app/main/report/report-soon-expire/report-soon-expire.component.scss
+++ b/src/app/main/report/report-soon-expire/report-soon-expire.component.scss
@@ -102,4 +102,37 @@
   background-color:#EEF7FF !important;
 }
 
+input[type="checkbox"] {
+  position: absolute;
+  opacity: 0;
+}
+
+label {
+  position: relative;
+  padding-left: 25px;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+label:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 15px;
+  height: 15px;
+  border: 1px solid #555;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+input[type="checkbox"]:checked + label:before {
+  content: "\2713";
+  color: #fff;
+  background-color: #555;
+  text-align: center;
+  line-height: 15px;
+  font-size: 12px;
+}
+
   
