--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -51,14 +51,14 @@
     </div>
 
     <!--Nút tick bao gồm tổ chức-->
-    <div class="row" style="padding-top: 10px;">
+    <!-- <div class="row" style="padding-top: 10px;">
         <div class="col-md-6">
                 <input (change)="changeCheckBox($event)" [checked]="fetchChildData"  type="checkbox" class="custom-control-input" id="customCheck3">
                 <label class="custom-control-label" for="customCheck3">
                     {{'include.org1' | translate}}
                 </label>
         </div>
-    </div>
+    </div> -->
 
 
 
