--- a/src/app/main/report/report-status-contract/report-status-contract.component.html
+++ b/src/app/main/report/report-status-contract/report-status-contract.component.html
@@ -50,12 +50,12 @@
     </div>
 
     <!--Nút tick bao gồm tổ chức-->
-    <div class="row" style="padding-top: 10px;">
+    <!-- <div class="row" style="padding-top: 10px;">
         <div class="col-md-6">
             <input type="radio">&nbsp;
             <span>{{'include.org1' | translate}}</span>
         </div>
-    </div>
+    </div> -->
 
 
 
