--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -48,6 +48,7 @@
   outline:0px;
   border-radius: 0 5px 5px 0;
 }
+
 .icon-password{
   top: 10px;
   right: 20px;
@@ -170,7 +171,7 @@
 
 .right-panel {
   width: 100%;
-  height: calc(100vh);
+  height: calc(150vh);
   position: relative;
 }
 
@@ -190,11 +191,11 @@
 .flex-column {
   flex-direction: column!important;
 }
-.input-form {
-  position: relative;
-  max-width: 480px;
-  margin: auto;
-}
+// .input-form {
+//   position: relative;
+//   max-width: 480px;
+//   margin: auto;
+// }
 .slogan {
   width: 100%;
   height: 25%;
@@ -205,4 +206,35 @@
   font-size: 40px;
   line-height: 48px;
   color: #fff;
+}
+
+
+.input-captcha {
+  border: 0;
+  background: #EFF2F5;
+  padding: 10px;
+  width: 90%;
+  outline:0px;
+  border-radius: 0 5px 5px 0;
+}
+
+.captcha-refresh {
+  // width: 40px;
+  border: none;
+  outline: none;
+  background: #888;
+  color:#eee;
+  cursor: pointer;
+}
+
+.preview {
+  color: #555;
+  width: 100%;
+  text-align: center;
+  height: 40px;
+  line-height: 40px;
+  letter-spacing: 8px;
+  border: 1px solid #888;
+  font-family: monospace;
+  margin-bottom: 5px;
 }
