kiem tra lissence gan timestamp, gui BCT

--- a/src/app/main/unit/detail-unit/detail-unit.component.html
+++ b/src/app/main/unit/detail-unit/detail-unit.component.html
@@ -147,6 +147,43 @@
             </span>
           </div>
         </div>
+
+        <div class="col-md-6">
+          <div class="label_item">
+            {{ "timestamp.used" | translate }}
+            <span class="highlight_result">
+              {{ this.numTimeStampUse }}
+            </span>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="label_item">
+            {{ "timestamp.purchased" | translate }}
+            <span class="highlight_result">
+              {{ this.numTimeStampBuy }}
+            </span>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="label_item">
+            {{ "ceca.used" | translate }}
+            <span class="highlight_result">
+              {{ this.numCecaUse }}
+            </span>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="label_item">
+            {{ "ceca.purchased" | translate }}
+            <span class="highlight_result">
+              {{ this.numCecaBuy }}
+            </span>
+          </div>
+        </div>
+
       </div>
     </div>
 
