--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -674,7 +674,7 @@
                     (change)="changeIsCoordination($event, item, id)">
                   <div style="padding: 0 20px 0 5px">Có người điều phối</div>
 
-                  <div *ngIf="getPartnerCoordination(item).length > 0 " style="display: flex">
+                  <div *ngIf="getPartnerCoordination(item).length > 0 && this.site === 'NB'" style="display: flex">
                     <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item)[0].is_otp != 1" 
                     (change)="changeIsSmsCoordination($event, item, 0)">
                     <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item)[0].is_otp == 1" checked 
