đổi mật khẩu khi mật khẩu yếu

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -189,10 +189,7 @@
 
             <div class="form-group">
               <div class="input-line">
-                <img
-                  src="../../assets/img/login_password.svg"
-                  class="input-img"
-                />
+                <img src="../../assets/img/login_password.svg" class="input-img"/>
                 <input
                   [type]="fieldTextType ? 'text' : 'password'"
                   placeholder="{{ 'login.password' | translate }}"
