--- a/src/app/main/dialog/reset-password-dialog/reset-password-dialog.component.html
+++ b/src/app/main/dialog/reset-password-dialog/reset-password-dialog.component.html
@@ -94,7 +94,7 @@
         </div>
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
-            <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'cancel' | translate}}</button>
+            <button *ngIf="data.weakPass" class="cancel-button" (click)="dialog.closeAll()" type="button">{{'cancel' | translate}}</button>
             <button class="save-button" (click)="onSubmit()">{{ "btn.save" | translate }}</button>
         </div>
     </form>
