--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -50,17 +50,6 @@
         </div>
     </div>
 
-    <!--Nút tick bao gồm tổ chức-->
-    <!-- <div class="row" style="padding-top: 10px;">
-        <div class="col-md-6">
-                <input (change)="changeCheckBox($event)" [checked]="fetchChildData"  type="checkbox" class="custom-control-input" id="customCheck3">
-                <label class="custom-control-label" for="customCheck3">
-                    {{'include.org1' | translate}}
-                </label>
-        </div>
-    </div> -->
-
-
 
     <!--Bảng dữ liệu-->
     <div class="row" style="padding-top: 20px;">
@@ -86,9 +75,9 @@
             <ng-template pTemplate="body" let-list>
                 <tr class="subheader-row">
                     <!-- <td>{{list.product}}</td> -->
-                    <td *ngFor="let col of mergeCol; let colIndex = index">
+                    <!-- <td *ngFor="let col of mergeCol; let colIndex = index">
                         <span *ngIf="col.id == 1">{{list.product}}</span>
-                    </td>
+                    </td> -->
                 </tr>
             </ng-template>
         </p-table>
