--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -210,7 +210,7 @@
               </div>
             </div>
 
-            <!-- <div class="form-group" *ngIf="captcha">
+            <div class="form-group" *ngIf="captcha">
               <label>Enter captcha</label>
               <div id="preview" class="preview" #previewCaptcha></div>
               <div class="input-line"> 
@@ -219,7 +219,7 @@
                   <i class="fa fa-refresh"></i>
                 </button>
               </div> 
-            </div> -->
+            </div>
 
             <div class="form-group forgot-password">
               <a href="/forgot-password"
