--- a/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.html
+++ b/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.html
@@ -76,8 +76,8 @@
                 </tr>
             </ng-template>
 
-            <ng-template pTemplate="body" let-list let-i="rowIndex">
-                <tr *ngIf="i == 0" class="subheader-row">
+            <ng-template pTemplate="body" let-list let-row="rowIndex">
+                <!-- <tr *ngIf="i == 0" class="subheader-row">
                     <td *ngFor="let col of cols; let colIndex = index">
                         <span *ngIf="col.id == 2">{{this.org}}</span>
                     </td>
@@ -91,7 +91,16 @@
                     <td>{{list.value.canceled}}</td>
                     <td>{{list.value.prepare_expires}}</td>
                     <td>{{list.value.expired}}</td>
-                </tr>
+                </tr> -->
+
+                <ng-container style="background-color: #EEF7FF;" *ngIf="row == 0">
+                    <!-- <td *ngIf="row == 0" style="font-style: normal;font-weight: 800;font-size: 13px;">{{this.orgName}}</td>
+                    <td *ngFor="let i of Arr(cols.length - 1).fill(1)"></td> -->
+                </ng-container>
+
+                <ng-container *ngIf="row > 0">
+                    
+                </ng-container>
             </ng-template>
 
             <ng-template pTemplate="footer">
