--- a/src/app/main/dialog/reset-password-dialog/reset-password-dialog.component.html
+++ b/src/app/main/dialog/reset-password-dialog/reset-password-dialog.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid">
     <div style="text-align: center; font-weight: bold">
       <h3 style="color: #106DB6; font-family: inherit;">{{'change.password' | translate}}</h3>
+      <span>{{'weak.pass' | translate}}</span>
     </div>
 
     <form [formGroup]="addForm" class="content">
